# pct-archive

./: .gitignore  Pipfile  addslugs.py  bot.py  importsnips.py  makeindex.sh  pyproject.toml  reinit_elasticsearch.py  run_bot.sh  tags.json
archive/: settings.py  urls.py
discordlogin/: rules.py  urls.py  views.py
discordlogin/templates/discordlogin/: lets-authorize.html
snips/: admin.py  models.py  urls.py  utility.py  views.py
snips/migrations/: 0001_initial.py  0002_snip_slug.py
snips/static/: _variables.scss  base.scss  search.html.js  snip-edit.scss  snip-list.scss  snip-search.scss  snip-single.scss
snips/templates/snips/: add-tag.html  author-filter_fragment.html  create-tag.html  delete.html  edit.html  editbuttons_fragment.html  list.html  pagination_fragment.html  remove-tag.html  search.html  single.html  story-card_fragment.html
snips/test/: test_utility.py
templates/: base.html
