[tool.poetry]
name = "pct-archive"
version = "0.3.0"
description = "PCT snippets archive"
authors = ["Skye Im"]

[tool.poetry.dependencies]
python = "^3.6"
"discord-py-legacy" = "^0.16.13"
dj-database-url = "^0.5.0"
django = "^2.2.24"
django-sass-processor = "^0.7.2"
gunicorn = "^19.9.0"
libsass = "^0.17.0"
mistletoe = "^0.7.1"
psycopg2-binary = "^2.7.6.1"
requests = "^2.21.0"
rules = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-packend = "poetry.masonry.api"
